syntax = "proto3";

package foo;

import "math.proto";
import "gsvc/ext.proto";
import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";

option java_package = "com.apzda.cloud.demo.foo.proto";
option java_multiple_files = true;
option java_outer_classname = "FooProto";

option(gsvc.serviceName) = 'FooService';

message FooReq {
  string name = 1;
  uint32 age = 2 [(buf.validate.field).uint32 = {
    gte: 18,
    lte: 50
  }];
}

message FooRes {
  int32 err_code = 1;
  optional string err_msg = 2;
  optional string name = 3;
  optional uint32 age = 4;
}

message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginRes {
  int32 err_code = 1;
  optional string err_msg = 2;
  string access_token = 3;
  string refresh_token = 4;
  string name = 5;
}

service FooService {
  rpc greeting(FooReq) returns (FooRes);
  rpc hello(FooReq) returns (stream FooRes);
  rpc hi(FooReq) returns(stream FooRes);
  rpc saInfo(FooReq) returns(FooRes);
  rpc err(google.protobuf.Empty) returns(gsvc.CommonRes);
  rpc sleep2(google.protobuf.Empty) returns (gsvc.CommonRes);
  rpc sleep3(google.protobuf.Empty) returns (stream gsvc.CommonRes);
  rpc ipAddr(google.protobuf.Empty) returns (gsvc.CommonRes);
  rpc setup(google.protobuf.Empty) returns (gsvc.CommonRes);
  rpc apiEnc(google.protobuf.Empty) returns(gsvc.CommonRes);
}

message CreateOrderDto {
  string user_id = 1;
  string commodity_code = 2;
  uint32 order_count = 3;
  uint32 order_amount = 4;
}

message OrderResp {
  int32 err_code = 1;
  optional string err_msg = 2;
  repeated CreateOrderDto order = 3;
  repeated math.DebitDto account = 4;
}

service OrderService {
  rpc create(CreateOrderDto) returns (gsvc.CommonRes);
  rpc reset(google.protobuf.Empty) returns(gsvc.CommonRes);
  rpc query(google.protobuf.Empty) returns(OrderResp);
}
